parser.out
Created by PLY (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> inicio
Rule 1     inicio -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> imprimir_instr PTCOMA
Rule 5     instruccion -> definicion_instr PTCOMA
Rule 6     instruccion -> asignacion_instr PTCOMA
Rule 7     instruccion -> asignacion_vec PTCOMA
Rule 8     instruccion -> asignacion_struct PTCOMA
Rule 9     instruccion -> if_instr
Rule 10    instruccion -> while_instr
Rule 11    instruccion -> loop_instr
Rule 12    instruccion -> funcion_instr
Rule 13    instruccion -> llamado_instr PTCOMA
Rule 14    instruccion -> match_instr
Rule 15    instruccion -> break_instr PTCOMA
Rule 16    instruccion -> continue_instr PTCOMA
Rule 17    instruccion -> return_instr PTCOMA
Rule 18    instruccion -> for_instr
Rule 19    instruccion -> push_instr PTCOMA
Rule 20    instruccion -> remove_instr PTCOMA
Rule 21    instruccion -> insert_instr PTCOMA
Rule 22    instruccion -> crear_struct
Rule 23    asignacion_instr -> ID IGUAL expresion
Rule 24    crear_struct -> STRUCT ID LLAVIZQ struct_data LLAVDER
Rule 25    struct_data -> struct_data COMA ID DOSPUNTOS tipos
Rule 26    struct_data -> ID DOSPUNTOS tipos
Rule 27    insert_instr -> ID PUNTO INSERT PARIZQ expresion COMA expresion PARDER
Rule 28    asignacion_vec -> ID lista_corch IGUAL expresion
Rule 29    asignacion_struct -> ID lids IGUAL expresion
Rule 30    remove_instr -> ID PUNTO REMOVE PARIZQ expresion PARDER
Rule 31    push_instr -> ID PUNTO PUSH PARIZQ expresion PARDER
Rule 32    return_instr -> RETURN expresion
Rule 33    for_instr -> FOR ID IN expresion statement
Rule 34    for_instr -> FOR ID IN ID statement
Rule 35    continue_instr -> CONTINUE
Rule 36    break_instr -> BREAK
Rule 37    break_instr -> BREAK expresion
Rule 38    loop_instr -> LOOP statement
Rule 39    match_instr -> MATCH expresion LLAVIZQ lismatch LLAVDER
Rule 40    match_instr -> MATCH ID LLAVIZQ lismatch LLAVDER
Rule 41    match_instr -> MATCH expresion LLAVIZQ LLAVDER
Rule 42    match_instr -> MATCH ID LLAVIZQ LLAVDER
Rule 43    lismatch -> lismatch instrmatch
Rule 44    lismatch -> instrmatch
Rule 45    instrmatch -> listcoincidencia FLECHAMATCH statement
Rule 46    instrmatch -> listcoincidencia FLECHAMATCH instruccion_match COMA
Rule 47    instrmatch -> DEFAULT FLECHAMATCH instruccion_match COMA
Rule 48    instrmatch -> DEFAULT FLECHAMATCH statement
Rule 49    instruccion_match -> imprimir_instr
Rule 50    instruccion_match -> definicion_instr
Rule 51    instruccion_match -> asignacion_instr
Rule 52    instruccion_match -> if_instr
Rule 53    instruccion_match -> while_instr
Rule 54    instruccion_match -> funcion_instr
Rule 55    instruccion_match -> llamado_instr
Rule 56    instruccion_match -> match_instr
Rule 57    expresion -> ID
Rule 58    listcoincidencia -> listcoincidencia O expresion
Rule 59    listcoincidencia -> expresion
Rule 60    llamado_instr -> ID PARIZQ PARDER
Rule 61    llamado_instr -> ID PARIZQ llparams PARDER
Rule 62    llparams -> llparams COMA expresion
Rule 63    llparams -> llparams COMA I MUT ID
Rule 64    llparams -> I MUT ID
Rule 65    llparams -> expresion
Rule 66    funcion_instr -> FN ID PARIZQ PARDER statement
Rule 67    funcion_instr -> FN ID PARIZQ PARDER FLECHA tipos statement
Rule 68    funcion_instr -> FN ID PARIZQ fparam PARDER statement
Rule 69    funcion_instr -> FN ID PARIZQ fparam PARDER FLECHA tipos statement
Rule 70    fparam -> fparam COMA fparametro
Rule 71    fparam -> fparametro
Rule 72    fparametro -> ID DOSPUNTOS tipos
Rule 73    fparametro -> ID DOSPUNTOS I MUT tipos
Rule 74    fparametro -> MUT ID DOSPUNTOS tipos
Rule 75    while_instr -> WHILE expresion statement
Rule 76    if_instr -> IF expresion statement
Rule 77    if_instr -> IF expresion statement ELSE statement
Rule 78    if_instr -> IF expresion statement ELSE if_instr
Rule 79    statement -> LLAVIZQ instrucciones LLAVDER
Rule 80    statement -> LLAVIZQ LLAVDER
Rule 81    definicion_instr -> LET MUT ID DOSPUNTOS tipos IGUAL expresion
Rule 82    definicion_instr -> LET ID DOSPUNTOS tipos IGUAL expresion
Rule 83    definicion_instr -> LET MUT ID IGUAL expresion
Rule 84    definicion_instr -> LET ID IGUAL expresion
Rule 85    tipos -> INT
Rule 86    tipos -> FLOAT
Rule 87    tipos -> BOOLEAN
Rule 88    tipos -> CHAR
Rule 89    tipos -> STRING
Rule 90    tipos -> I ISTRING
Rule 91    tipos -> USIZE
Rule 92    tipos -> ID
Rule 93    tipos -> VVEC MENQUE tipos MAYQUE
Rule 94    tipos -> CORCHIZQ tipos PTCOMA expresion CORCHDER
Rule 95    tipos -> CORCHIZQ tipos CORCHDER
Rule 96    imprimir_instr -> PRINTLN ADMIR PARIZQ CADENA PARDER
Rule 97    imprimir_instr -> PRINTLN ADMIR PARIZQ CADENA pparam PARDER
Rule 98    pparam -> pparam COMA expresion
Rule 99    pparam -> COMA expresion
Rule 100   expresion -> expresion MAS expresion
Rule 101   expresion -> expresion MENOS expresion
Rule 102   expresion -> expresion POR expresion
Rule 103   expresion -> expresion DIVIDIDO expresion
Rule 104   expresion -> expresion MODULO expresion
Rule 105   expresion -> INT DOSPUNTOS DOSPUNTOS POW PARIZQ expresion COMA expresion PARDER
Rule 106   expresion -> FLOAT DOSPUNTOS DOSPUNTOS POWF PARIZQ expresion COMA expresion PARDER
Rule 107   expresion -> MENOS expresion
Rule 108   expresion -> PARIZQ expresion PARDER
Rule 109   expresion -> ENTERO
Rule 110   expresion -> DECIMAL
Rule 111   expresion -> CADENA
Rule 112   expresion -> CARACTER
Rule 113   expresion -> TRUE
Rule 114   expresion -> FALSE
Rule 115   expresion -> expresion PUNTO PUNTO expresion
Rule 116   expresion -> ID lista_corch
Rule 117   lista_corch -> lista_corch CORCHIZQ expresion CORCHDER
Rule 118   lista_corch -> CORCHIZQ expresion CORCHDER
Rule 119   expresion -> expresion MAYQUE expresion
Rule 120   expresion -> expresion MENQUE expresion
Rule 121   expresion -> expresion IGUALQUE expresion
Rule 122   expresion -> expresion NIGUALQUE expresion
Rule 123   expresion -> expresion MAYORIGUAL expresion
Rule 124   expresion -> expresion MENORIGUAL expresion
Rule 125   expresion -> expresion OR expresion
Rule 126   expresion -> expresion AND expresion
Rule 127   expresion -> ADMIR expresion
Rule 128   expresion -> expresion_if
Rule 129   expresion -> expresion_match
Rule 130   expresion -> expresion_vectorial
Rule 131   expresion -> expresion_array
Rule 132   expresion -> expresion_loop
Rule 133   expresion -> llamado_instr
Rule 134   expresion -> remove_instr
Rule 135   expresion -> ID LLAVIZQ struct_dicc LLAVDER
Rule 136   struct_dicc -> struct_dicc COMA ID DOSPUNTOS expresion
Rule 137   struct_dicc -> ID DOSPUNTOS expresion
Rule 138   expresion -> ID lids
Rule 139   lids -> lids PUNTO ID
Rule 140   lids -> PUNTO ID
Rule 141   expresion -> expresion PUNTO LEN PARIZQ PARDER
Rule 142   expresion -> ID PUNTO LEN PARIZQ PARDER
Rule 143   expresion -> ID PUNTO CONTAINS PARIZQ I expresion PARDER
Rule 144   expresion -> ID PUNTO CAPACITY PARIZQ PARDER
Rule 145   expresion_loop -> LOOP statement
Rule 146   expresion_match -> MATCH expresion LLAVIZQ lmatchexp LLAVDER
Rule 147   expresion_match -> MATCH ID LLAVIZQ lmatchexp LLAVDER
Rule 148   lmatchexp -> lmatchexp matchexp
Rule 149   lmatchexp -> matchexp
Rule 150   matchexp -> listcoincidencia FLECHAMATCH expresion COMA
Rule 151   matchexp -> DEFAULT FLECHAMATCH expresion COMA
Rule 152   expresion_if -> IF expresion statement_expresion ELSE statement_expresion
Rule 153   expresion_if -> IF ID statement_expresion ELSE expresion_if
Rule 154   expresion_if -> IF expresion statement_expresion ELSE expresion_if
Rule 155   statement_expresion -> LLAVIZQ expresion LLAVDER
Rule 156   expresion -> expresion PUNTO TOSTRING PARIZQ PARDER
Rule 157   expresion -> expresion PUNTO TOOWNED PARIZQ PARDER
Rule 158   expresion -> ID PUNTO TOSTRING PARIZQ PARDER
Rule 159   expresion -> ID PUNTO TOOWNED PARIZQ PARDER
Rule 160   expresion -> expresion PUNTO ABS PARIZQ PARDER
Rule 161   expresion -> ID PUNTO ABS PARIZQ PARDER
Rule 162   expresion -> expresion PUNTO SQRT PARIZQ PARDER
Rule 163   expresion -> ID PUNTO SQRT PARIZQ PARDER
Rule 164   expresion -> expresion AS tipos
Rule 165   expresion_vectorial -> VVEC DOSPUNTOS DOSPUNTOS NEW PARIZQ PARDER
Rule 166   expresion_vectorial -> VVEC DOSPUNTOS DOSPUNTOS WCAPACITY PARIZQ expresion PARDER
Rule 167   expresion_vectorial -> VEC ADMIR CORCHIZQ lista_vectorial CORCHDER
Rule 168   expresion_vectorial -> VEC ADMIR CORCHIZQ valores_repetidos CORCHDER
Rule 169   expresion_array -> CORCHIZQ lista_vectorial CORCHDER
Rule 170   expresion_array -> CORCHIZQ valores_repetidos CORCHDER
Rule 171   valores_repetidos -> expresion PTCOMA expresion
Rule 172   lista_vectorial -> lista_vectorial COMA expresion
Rule 173   lista_vectorial -> expresion

Terminals, with rules where they appear

ABS                  : 160 161
ADMIR                : 96 97 127 167 168
AND                  : 126
AS                   : 164
BOOLEAN              : 87
BREAK                : 36 37
CADENA               : 96 97 111
CAPACITY             : 144
CARACTER             : 112
CHAR                 : 88
COMA                 : 25 27 46 47 62 63 70 98 99 105 106 136 150 151 172
CONTAINS             : 143
CONTINUE             : 35
CORCHDER             : 94 95 117 118 167 168 169 170
CORCHIZQ             : 94 95 117 118 167 168 169 170
DECIMAL              : 110
DEFAULT              : 47 48 151
DIVIDIDO             : 103
DOSPUNTOS            : 25 26 72 73 74 81 82 105 105 106 106 136 137 165 165 166 166
ELSE                 : 77 78 152 153 154
ENTERO               : 109
FALSE                : 114
FLECHA               : 67 69
FLECHAMATCH          : 45 46 47 48 150 151
FLOAT                : 86 106
FN                   : 66 67 68 69
FOR                  : 33 34
I                    : 63 64 73 90 143
ID                   : 23 24 25 26 27 28 29 30 31 33 34 34 40 42 57 60 61 63 64 66 67 68 69 72 73 74 81 82 83 84 92 116 135 136 137 138 139 140 142 143 144 147 153 158 159 161 163
IF                   : 76 77 78 152 153 154
IGUAL                : 23 28 29 81 82 83 84
IGUALQUE             : 121
IN                   : 33 34
INSERT               : 27
INT                  : 85 105
ISTRING              : 90
LEN                  : 141 142
LET                  : 81 82 83 84
LLAVDER              : 24 39 40 41 42 79 80 135 146 147 155
LLAVIZQ              : 24 39 40 41 42 79 80 135 146 147 155
LOOP                 : 38 145
MAS                  : 100
MATCH                : 39 40 41 42 146 147
MAYORIGUAL           : 123
MAYQUE               : 93 119
MENORIGUAL           : 124
MENOS                : 101 107
MENQUE               : 93 120
MODULO               : 104
MUT                  : 63 64 73 74 81 83
NEW                  : 165
NIGUALQUE            : 122
O                    : 58
OR                   : 125
PARDER               : 27 30 31 60 61 66 67 68 69 96 97 105 106 108 141 142 143 144 156 157 158 159 160 161 162 163 165 166
PARIZQ               : 27 30 31 60 61 66 67 68 69 96 97 105 106 108 141 142 143 144 156 157 158 159 160 161 162 163 165 166
POR                  : 102
POW                  : 105
POWF                 : 106
PRINTLN              : 96 97
PTCOMA               : 4 5 6 7 8 13 15 16 17 19 20 21 94 171
PUNTO                : 27 30 31 115 115 139 140 141 142 143 144 156 157 158 159 160 161 162 163
PUSH                 : 31
REMOVE               : 30
RETURN               : 32
SQRT                 : 162 163
STRING               : 89
STRUCT               : 24
TOOWNED              : 157 159
TOSTRING             : 156 158
TRUE                 : 113
USIZE                : 91
VEC                  : 167 168
VVEC                 : 93 165 166
WCAPACITY            : 166
WHILE                : 75
error                : 

Nonterminals, with rules where they appear

asignacion_instr     : 6 51
asignacion_struct    : 8
asignacion_vec       : 7
break_instr          : 15
continue_instr       : 16
crear_struct         : 22
definicion_instr     : 5 50
expresion            : 23 27 27 28 29 30 31 32 33 37 39 41 58 59 62 65 75 76 77 78 81 82 83 84 94 98 99 100 100 101 101 102 102 103 103 104 104 105 105 106 106 107 108 115 115 117 118 119 119 120 120 121 121 122 122 123 123 124 124 125 125 126 126 127 136 137 141 143 146 150 151 152 154 155 156 157 160 162 164 166 171 171 172 173
expresion_array      : 131
expresion_if         : 128 153 154
expresion_loop       : 132
expresion_match      : 129
expresion_vectorial  : 130
for_instr            : 18
fparam               : 68 69 70
fparametro           : 70 71
funcion_instr        : 12 54
if_instr             : 9 52 78
imprimir_instr       : 4 49
inicio               : 0
insert_instr         : 21
instrmatch           : 43 44
instruccion          : 2 3
instruccion_match    : 46 47
instrucciones        : 1 2 79
lids                 : 29 138 139
lismatch             : 39 40 43
lista_corch          : 28 116 117
lista_vectorial      : 167 169 172
listcoincidencia     : 45 46 58 150
llamado_instr        : 13 55 133
llparams             : 61 62 63
lmatchexp            : 146 147 148
loop_instr           : 11
match_instr          : 14 56
matchexp             : 148 149
pparam               : 97 98
push_instr           : 19
remove_instr         : 20 134
return_instr         : 17
statement            : 33 34 38 45 48 66 67 68 69 75 76 77 77 78 145
statement_expresion  : 152 152 153 154
struct_data          : 24 25
struct_dicc          : 135 136
tipos                : 25 26 67 69 72 73 74 81 82 93 94 95 164
valores_repetidos    : 168 170
while_instr          : 10 53


state 0

    (0) S' -> . inicio
    (1) inicio -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . imprimir_instr PTCOMA
    (5) instruccion -> . definicion_instr PTCOMA
    (6) instruccion -> . asignacion_instr PTCOMA
    (7) instruccion -> . asignacion_vec PTCOMA
    (8) instruccion -> . asignacion_struct PTCOMA
    (9) instruccion -> . if_instr
    (10) instruccion -> . while_instr
    (11) instruccion -> . loop_instr
    (12) instruccion -> . funcion_instr
    (13) instruccion -> . llamado_instr PTCOMA
    (14) instruccion -> . match_instr
    (15) instruccion -> . break_instr PTCOMA
    (16) instruccion -> . continue_instr PTCOMA
    (17) instruccion -> . return_instr PTCOMA
    (18) instruccion -> . for_instr
    (19) instruccion -> . push_instr PTCOMA
    (20) instruccion -> . remove_instr PTCOMA
    (21) instruccion -> . insert_instr PTCOMA
    (22) instruccion -> . crear_struct
    (96) imprimir_instr -> . PRINTLN ADMIR PARIZQ CADENA PARDER
    (97) imprimir_instr -> . PRINTLN ADMIR PARIZQ CADENA pparam PARDER
    (81) definicion_instr -> . LET MUT ID DOSPUNTOS tipos IGUAL expresion
    (82) definicion_instr -> . LET ID DOSPUNTOS tipos IGUAL expresion
    (83) definicion_instr -> . LET MUT ID IGUAL expresion
    (84) definicion_instr -> . LET ID IGUAL expresion
    (23) asignacion_instr -> . ID IGUAL expresion
    (28) asignacion_vec -> . ID lista_corch IGUAL expresion
    (29) asignacion_struct -> . ID lids IGUAL expresion
    (76) if_instr -> . IF expresion statement
    (77) if_instr -> . IF expresion statement ELSE statement
    (78) if_instr -> . IF expresion statement ELSE if_instr
    (75) while_instr -> . WHILE expresion statement
    (38) loop_instr -> . LOOP statement
    (66) funcion_instr -> . FN ID PARIZQ PARDER statement
    (67) funcion_instr -> . FN ID PARIZQ PARDER FLECHA tipos statement
    (68) funcion_instr -> . FN ID PARIZQ fparam PARDER statement
    (69) funcion_instr -> . FN ID PARIZQ fparam PARDER FLECHA tipos statement
    (60) llamado_instr -> . ID PARIZQ PARDER
    (61) llamado_instr -> . ID PARIZQ llparams PARDER
    (39) match_instr -> . MATCH expresion LLAVIZQ lismatch LLAVDER
    (40) match_instr -> . MATCH ID LLAVIZQ lismatch LLAVDER
    (41) match_instr -> . MATCH expresion LLAVIZQ LLAVDER
    (42) match_instr -> . MATCH ID LLAVIZQ LLAVDER
    (36) break_instr -> . BREAK
    (37) break_instr -> . BREAK expresion
    (35) continue_instr -> . CONTINUE
    (32) return_instr -> . RETURN expresion
    (33) for_instr -> . FOR ID IN expresion statement
    (34) for_instr -> . FOR ID IN ID statement
    (31) push_instr -> . ID PUNTO PUSH PARIZQ expresion PARDER
    (30) remove_instr -> . ID PUNTO REMOVE PARIZQ expresion PARDER
    (27) insert_instr -> . ID PUNTO INSERT PARIZQ expresion COMA expresion PARDER
    (24) crear_struct -> . STRUCT ID LLAVIZQ struct_data LLAVDER

    PRINTLN         shift and go to state 23
    LET             shift and go to state 24
    ID              shift and go to state 25
    IF              shift and go to state 26
    WHILE           shift and go to state 27
    LOOP            shift and go to state 28
    FN              shift and go to state 29
    MATCH           shift and go to state 30
    BREAK           shift and go to state 31
    CONTINUE        shift and go to state 32
    RETURN          shift and go to state 33
    FOR             shift and go to state 34
    STRUCT          shift and go to state 35

    inicio                         shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    imprimir_instr                 shift and go to state 4
    definicion_instr               shift and go to state 5
    asignacion_instr               shift and go to state 6
    asignacion_vec                 shift and go to state 7
    asignacion_struct              shift and go to state 8
    if_instr                       shift and go to state 9
    while_instr                    shift and go to state 10
    loop_instr                     shift and go to state 11
    funcion_instr                  shift and go to state 12
    llamado_instr                  shift and go to state 13
    match_instr                    shift and go to state 14
    break_instr                    shift and go to state 15
    continue_instr                 shift and go to state 16
    return_instr                   shift and go to state 17
    for_instr                      shift and go to state 18
    push_instr                     shift and go to state 19
    remove_instr                   shift and go to state 20
    insert_instr                   shift and go to state 21
    crear_struct                   shift and go to state 22

state 1

    (0) S' -> inicio .



state 2

    (1) inicio -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . imprimir_instr PTCOMA
    (5) instruccion -> . definicion_instr PTCOMA
    (6) instruccion -> . asignacion_instr PTCOMA
    (7) instruccion -> . asignacion_vec PTCOMA
    (8) instruccion -> . asignacion_struct PTCOMA
    (9) instruccion -> . if_instr
    (10) instruccion -> . while_instr
    (11) instruccion -> . loop_instr
    (12) instruccion -> . funcion_instr
    (13) instruccion -> . llamado_instr PTCOMA
    (14) instruccion -> . match_instr
    (15) instruccion -> . break_instr PTCOMA
    (16) instruccion -> . continue_instr PTCOMA
    (17) instruccion -> . return_instr PTCOMA
    (18) instruccion -> . for_instr
    (19) instruccion -> . push_instr PTCOMA
    (20) instruccion -> . remove_instr PTCOMA
    (21) instruccion -> . insert_instr PTCOMA
    (22) instruccion -> . crear_struct
    (96) imprimir_instr -> . PRINTLN ADMIR PARIZQ CADENA PARDER
    (97) imprimir_instr -> . PRINTLN ADMIR PARIZQ CADENA pparam PARDER
    (81) definicion_instr -> . LET MUT ID DOSPUNTOS tipos IGUAL expresion
    (82) definicion_instr -> . LET ID DOSPUNTOS tipos IGUAL expresion
    (83) definicion_instr -> . LET MUT ID IGUAL expresion
    (84) definicion_instr -> . LET ID IGUAL expresion
    (23) asignacion_instr -> . ID IGUAL expresion
    (28) asignacion_vec -> . ID lista_corch IGUAL expresion
    (29) asignacion_struct -> . ID lids IGUAL expresion
    (76) if_instr -> . IF expresion statement
    (77) if_instr -> . IF expresion statement ELSE statement
    (78) if_instr -> . IF expresion statement ELSE if_instr
    (75) while_instr -> . WHILE expresion statement
    (38) loop_instr -> . LOOP statement
    (66) funcion_instr -> . FN ID PARIZQ PARDER statement
    (67) funcion_instr -> . FN ID PARIZQ PARDER FLECHA tipos statement
    (68) funcion_instr -> . FN ID PARIZQ fparam PARDER statement
    (69) funcion_instr -> . FN ID PARIZQ fparam PARDER FLECHA tipos statement
    (60) llamado_instr -> . ID PARIZQ PARDER
    (61) llamado_instr -> . ID PARIZQ llparams PARDER
    (39) match_instr -> . MATCH expresion LLAVIZQ lismatch LLAVDER
    (40) match_instr -> . MATCH ID LLAVIZQ lismatch LLAVDER
    (41) match_instr -> . MATCH expresion LLAVIZQ LLAVDER
    (42) match_instr -> . MATCH ID LLAVIZQ LLAVDER
    (36) break_instr -> . BREAK
    (37) break_instr -> . BREAK expresion
    (35) continue_instr -> . CONTINUE
    (32) return_instr -> . RETURN expresion
    (33) for_instr -> . FOR ID IN expresion statement
    (34) for_instr -> . FOR ID IN ID statement
    (31) push_instr -> . ID PUNTO PUSH PARIZQ expresion PARDER
    (30) remove_instr -> . ID PUNTO REMOVE PARIZQ expresion PARDER
    (27) insert_instr -> . ID PUNTO INSERT PARIZQ expresion COMA expresion PARDER
    (24) crear_struct -> . STRUCT ID LLAVIZQ struct_data LLAVDER

    $end            reduce using rule 1 (inicio -> instrucciones .)
    PRINTLN         shift and go to state 23
    LET             shift and go to state 24
    ID              shift and go to state 25
    IF              shift and go to state 26
    WHILE           shift and go to state 27
    LOOP            shift and go to state 28
    FN              shift and go to state 29
    MATCH           shift and go to state 30
    BREAK           shift and go to state 31
    CONTINUE        shift and go to state 32
    RETURN          shift and go to state 33
    FOR             shift and go to state 34
    STRUCT          shift and go to state 35

    instruccion                    shift and go to state 36
    imprimir_instr                 shift and go to state 4
    definicion_instr               shift and go to state 5
    asignacion_instr               shift and go to state 6
    asignacion_vec                 shift and go to state 7
    asignacion_struct              shift and go to state 8
    if_instr                       shift and go to state 9
    while_instr                    shift and go to state 10
    loop_instr                     shift and go to state 11
    funcion_instr                  shift and go to state 12
    llamado_instr                  shift and go to state 13
    match_instr                    shift and go to state 14
    break_instr                    shift and go to state 15
    continue_instr                 shift and go to state 16
    return_instr                   shift and go to state 17
    for_instr                      shift and go to state 18
    push_instr                     shift and go to state 19
    remove_instr                   shift and go to state 20
    insert_instr                   shift and go to state 21
    crear_struct                   shift and go to state 22

state 3

    (3) instrucciones -> instruccion .

    PRINTLN         reduce using rule 3 (instrucciones -> instruccion .)
    LET             reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    IF              reduce using rule 3 (instrucciones -> instruccion .)
    WHILE           reduce using rule 3 (instrucciones -> instruccion .)
    LOOP            reduce using rule 3 (instrucciones -> instruccion .)
    FN              reduce using rule 3 (instrucciones -> instruccion .)
    MATCH           reduce using rule 3 (instrucciones -> instruccion .)
    BREAK           reduce using rule 3 (instrucciones -> instruccion .)
    CONTINUE        reduce using rule 3 (instrucciones -> instruccion .)
    RETURN          reduce using rule 3 (instrucciones -> instruccion .)
    FOR             reduce using rule 3 (instrucciones -> instruccion .)
    STRUCT          reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)
    LLAVDER         reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> imprimir_instr . PTCOMA

    PTCOMA          shift and go to state 37


state 5

    (5) instruccion -> definicion_instr . PTCOMA

    PTCOMA          shift and go to state 38


state 6

    (6) instruccion -> asignacion_instr . PTCOMA

    PTCOMA          shift and go to state 39


state 7

    (7) instruccion -> asignacion_vec . PTCOMA

    PTCOMA          shift and go to state 40


state 8

    (8) instruccion -> asignacion_struct . PTCOMA

    PTCOMA          shift and go to state 41


state 9

    (9) instruccion -> if_instr .

    PRINTLN         reduce using rule 9 (instruccion -> if_instr .)
    LET             reduce using rule 9 (instruccion -> if_instr .)
    ID              reduce using rule 9 (instruccion -> if_instr .)
    IF              reduce using rule 9 (instruccion -> if_instr .)
    WHILE           reduce using rule 9 (instruccion -> if_instr .)
    LOOP            reduce using rule 9 (instruccion -> if_instr .)
    FN              reduce using rule 9 (instruccion -> if_instr .)
    MATCH           reduce using rule 9 (instruccion -> if_instr .)
    BREAK           reduce using rule 9 (instruccion -> if_instr .)
    CONTINUE        reduce using rule 9 (instruccion -> if_instr .)
    RETURN          reduce using rule 9 (instruccion -> if_instr .)
    FOR             reduce using rule 9 (instruccion -> if_instr .)
    STRUCT          reduce using rule 9 (instruccion -> if_instr .)
    $end            reduce using rule 9 (instruccion -> if_instr .)
    LLAVDER         reduce using rule 9 (instruccion -> if_instr .)


state 10

    (10) instruccion -> while_instr .

    PRINTLN         reduce using rule 10 (instruccion -> while_instr .)
    LET             reduce using rule 10 (instruccion -> while_instr .)
    ID              reduce using rule 10 (instruccion -> while_instr .)
    IF              reduce using rule 10 (instruccion -> while_instr .)
    WHILE           reduce using rule 10 (instruccion -> while_instr .)
    LOOP            reduce using rule 10 (instruccion -> while_instr .)
    FN              reduce using rule 10 (instruccion -> while_instr .)
    MATCH           reduce using rule 10 (instruccion -> while_instr .)
    BREAK           reduce using rule 10 (instruccion -> while_instr .)
    CONTINUE        reduce using rule 10 (instruccion -> while_instr .)
    RETURN          reduce using rule 10 (instruccion -> while_instr .)
    FOR             reduce using rule 10 (instruccion -> while_instr .)
    STRUCT          reduce using rule 10 (instruccion -> while_instr .)
    $end            reduce using rule 10 (instruccion -> while_instr .)
    LLAVDER         reduce using rule 10 (instruccion -> while_instr .)


state 11

    (11) instruccion -> loop_instr .

    PRINTLN         reduce using rule 11 (instruccion -> loop_instr .)
    LET             reduce using rule 11 (instruccion -> loop_instr .)
    ID              reduce using rule 11 (instruccion -> loop_instr .)
    IF              reduce using rule 11 (instruccion -> loop_instr .)
    WHILE           reduce using rule 11 (instruccion -> loop_instr .)
    LOOP            reduce using rule 11 (instruccion -> loop_instr .)
    FN              reduce using rule 11 (instruccion -> loop_instr .)
    MATCH           reduce using rule 11 (instruccion -> loop_instr .)
    BREAK           reduce using rule 11 (instruccion -> loop_instr .)
    CONTINUE        reduce using rule 11 (instruccion -> loop_instr .)
    RETURN          reduce using rule 11 (instruccion -> loop_instr .)
    FOR             reduce using rule 11 (instruccion -> loop_instr .)
    STRUCT          reduce using rule 11 (instruccion -> loop_instr .)
    $end            reduce using rule 11 (instruccion -> loop_instr .)
    LLAVDER         reduce using rule 11 (instruccion -> loop_instr .)


state 12

    (12) instruccion -> funcion_instr .

    PRINTLN         reduce using rule 12 (instruccion -> funcion_instr .)
    LET             reduce using rule 12 (instruccion -> funcion_instr .)
    ID              reduce using rule 12 (instruccion -> funcion_instr .)
    IF              reduce using rule 12 (instruccion -> funcion_instr .)
    WHILE           reduce using rule 12 (instruccion -> funcion_instr .)
    LOOP            reduce using rule 12 (instruccion -> funcion_instr .)
    FN              reduce using rule 12 (instruccion -> funcion_instr .)
    MATCH           reduce using rule 12 (instruccion -> funcion_instr .)
    BREAK           reduce using rule 12 (instruccion -> funcion_instr .)
    CONTINUE        reduce using rule 12 (instruccion -> funcion_instr .)
    RETURN          reduce using rule 12 (instruccion -> funcion_instr .)
    FOR             reduce using rule 12 (instruccion -> funcion_instr .)
    STRUCT          reduce using rule 12 (instruccion -> funcion_instr .)
    $end            reduce using rule 12 (instruccion -> funcion_instr .)
    LLAVDER         reduce using rule 12 (instruccion -> funcion_instr .)


state 13

    (13) instruccion -> llamado_instr . PTCOMA

    PTCOMA          shift and go to state 42


state 14

    (14) instruccion -> match_instr .

    PRINTLN         reduce using rule 14 (instruccion -> match_instr .)
    LET             reduce using rule 14 (instruccion -> match_instr .)
    ID              reduce using rule 14 (instruccion -> match_instr .)
    IF              reduce using rule 14 (instruccion -> match_instr .)
    WHILE           reduce using rule 14 (instruccion -> match_instr .)
    LOOP            reduce using rule 14 (instruccion -> match_instr .)
    FN              reduce using rule 14 (instruccion -> match_instr .)
    MATCH           reduce using rule 14 (instruccion -> match_instr .)
    BREAK           reduce using rule 14 (instruccion -> match_instr .)
    CONTINUE        reduce using rule 14 (instruccion -> match_instr .)
    RETURN          reduce using rule 14 (instruccion -> match_instr .)
    FOR             reduce using rule 14 (instruccion -> match_instr .)
    STRUCT          reduce using rule 14 (instruccion -> match_instr .)
    $end            reduce using rule 14 (instruccion -> match_instr .)
    LLAVDER         reduce using rule 14 (instruccion -> match_instr .)


state 15

    (15) instruccion -> break_instr . PTCOMA

    PTCOMA          shift and go to state 43


state 16

    (16) instruccion -> continue_instr . PTCOMA

    PTCOMA          shift and go to state 44


state 17

    (17) instruccion -> return_instr . PTCOMA

    PTCOMA          shift and go to state 45


state 18

    (18) instruccion -> for_instr .

    PRINTLN         reduce using rule 18 (instruccion -> for_instr .)
    LET             reduce using rule 18 (instruccion -> for_instr .)
    ID              reduce using rule 18 (instruccion -> for_instr .)
    IF              reduce using rule 18 (instruccion -> for_instr .)
    WHILE           reduce using rule 18 (instruccion -> for_instr .)
    LOOP            reduce using rule 18 (instruccion -> for_instr .)
    FN              reduce using rule 18 (instruccion -> for_instr .)
    MATCH           reduce using rule 18 (instruccion -> for_instr .)
    BREAK           reduce using rule 18 (instruccion -> for_instr .)
    CONTINUE        reduce using rule 18 (instruccion -> for_instr .)
    RETURN          reduce using rule 18 (instruccion -> for_instr .)
    FOR             reduce using rule 18 (instruccion -> for_instr .)
    STRUCT          reduce using rule 18 (instruccion -> for_instr .)
    $end            reduce using rule 18 (instruccion -> for_instr .)
    LLAVDER         reduce using rule 18 (instruccion -> for_instr .)


state 19

    (19) instruccion -> push_instr . PTCOMA

    PTCOMA          shift and go to state 46


state 20

    (20) instruccion -> remove_instr . PTCOMA

    PTCOMA          shift and go to state 47


state 21

    (21) instruccion -> insert_instr . PTCOMA

    PTCOMA          shift and go to state 48


state 22

    (22) instruccion -> crear_struct .
